2012-05-28  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/action/body_go_to_point.cpp:
	* rcsc/action/Makefile.am:
	* rcsc/action/body_go_to_point.h:
	* rcsc/action/bhv_shoot.h:
	* rcsc/action/bhv_shoot2008.cpp:
	* rcsc/action/bhv_shoot2008.h:
	* rcsc/action/body_go_to_point2009.cpp:
	* rcsc/action/body_go_to_point2009.h:
	* rcsc/action/body_go_to_point2010.cpp:
	* rcsc/action/body_go_to_point2010.h:
	* rcsc/action/obsolete/bhv_shoot.h:
	* rcsc/action/obsolete/bhv_shoot2008.cpp:
	* rcsc/action/obsolete/bhv_shoot2008.h:
	* rcsc/action/obsolete/body_go_to_point2009.cpp:
	* rcsc/action/obsolete/body_go_to_point2009.h:
	* rcsc/action/obsolete/body_go_to_point2010.cpp:
	* rcsc/action/obsolete/body_go_to_point2010.h:
	* rcsc/action/obsolete/shoot_table2008.cpp:
	* rcsc/action/obsolete/shoot_table2008.h:
	* rcsc/action/shoot_table2008.cpp:
	* rcsc/action/shoot_table2008.h:
	- obsoleteな行動クラスを移動

	* rcsc/player/player_object_updater.cpp:
	* rcsc/player/player_object_updater.h:
	* rcsc/player/Makefile.am:
	* rcsc/player/player_object.cpp:
	* rcsc/player/player_object.h:
	* rcsc/player/world_model.cpp:
	* rcsc/player/world_model.h:
	- see情報に基づくプレイヤ情報更新を再実装
	- PlayerObjectUpdaterクラスへ移譲する設計としているが，再設計が必要かもしれない
	- PlayerObjectのカウンタをWorldModelのメンバ変数からPlayerObjectク
	ラスのstaticメンバ変数へ変更．カウンタ変数はPlayerObjectのコンスト
	ラクタ内部でのみインクリメントされる
	- プレイヤカウンタ変数を0にリセットするstaticメンバ関数を
	PlayerObjectクラスに追加

2012-05-27  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/Makefile.am:
	* rcsc/player/localization.h:
	* rcsc/player/localization_default.cpp:
	* rcsc/player/localization_default.h:
	* rcsc/player/localization_pfilter.cpp:
	* rcsc/player/localization_pfilter.h:
	* rcsc/player/world_model.cpp:
	- プレイヤマッチングアルゴリズム再実装中．動作確認はできたが設計を
	修正する必要あり

2012-05-25  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/common/audio_memory.h:
	* rcsc/player/world_model.cpp:
	- AudioMomory::Setplayへのアクセサメソッドを追加
	- サイクル停止からの復帰後にセットプレイカウントを0にセットするように変更

	* rcsc/common/audio_codec.cpp: