@@ -16,7 +16,6 @@ librcsc_action_la_SOURCES = \
 	body_go_to_point_dodge.cpp \
 	body_hold_ball2008.cpp \
 	body_intercept2009.cpp \
-	body_kick_collide_with_ball.cpp \
 	body_kick_one_step.cpp \
 	body_kick_to_relative.cpp \
 	body_pass.cpp \
@@ -82,7 +81,6 @@ librcsc_actioninclude_HEADERS = \
 	body_hold_ball2008.h \
 	body_intercept.h \
 	body_intercept2009.h \
-	body_kick_collide_with_ball.h \
 	body_kick_one_step.h \
 	body_kick_to_relative.h \
 	body_pass.h \
